Seeders, alguns ajustes
